--- a/app/src/main/res/layout/fragment1.xml
+++ b/app/src/main/res/layout/fragment1.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_bright">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView"
+    <GridView
+        android:id="@+id/gridView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="tab1"
-        android:textSize="40dp"/>
+        android:layout_height="match_parent"
+        android:background="@android:color/holo_orange_light"
+        android:horizontalSpacing="10dp"
+        android:numColumns="2"
+        android:padding="15dp"
+        android:verticalSpacing="10dp" />
 
 </LinearLayout>
